<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="150"
        android:textStyle="bold"
        android:textSize="50dp"
        android:padding="15dp"
        android:gravity="bottom|right"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/black">
            <Button
                android:id="@+id/bt7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so7"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray"/>
            <Button
                android:id="@+id/bt8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so8"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray"/>
            <Button
                android:id="@+id/bt9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so9"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray"/>
            <Button
                android:id="@+id/xoa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-"
                android:textStyle="bold"
                android:textSize="40dp"
                android:padding="5dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:backgroundTint="#E19748"/>
            <Button
                android:id="@+id/xoahet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="C"
                android:textStyle="bold"
                android:textSize="30dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="#E19748"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/black">
            <Button
                android:id="@+id/bt4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so4"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray" />
            <Button
                android:id="@+id/bt5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so5"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray" />
            <Button
                android:id="@+id/bt6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so6"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray" />
            <Button
                android:id="@+id/tru"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="-"
                android:textStyle="bold"
                android:textSize="40dp"
                android:padding="5dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:backgroundTint="#E19748" />
            <Button
                android:id="@+id/chia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="/"
                android:textStyle="bold"
                android:textSize="30dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="#E19748" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/black">
            <Button
                android:id="@+id/bt1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so1"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray" />
            <Button
                android:id="@+id/bt2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so2"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray" />
            <Button
                android:id="@+id/bt3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so3"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray" />
            <Button
                android:id="@+id/cong"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="+"
                android:textStyle="bold"
                android:textSize="40dp"
                android:padding="5dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:backgroundTint="#E19748" />
            <Button
                android:id="@+id/nhan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="*"
                android:textStyle="bold"
                android:textSize="30dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="#E19748" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/black">
            <Button
                android:id="@+id/bt0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/so0"
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray" />
            <Button
                android:id="@+id/cham"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="="
                android:textStyle="bold"
                android:textSize="30dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="@color/gray" />

            <Button
                android:id="@+id/bang"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="."
                android:textStyle="bold"
                android:textSize="25dp"
                android:padding="5dp"
                android:layout_margin="1dp"
                android:backgroundTint="#E19748" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>